force-app/main/default/objects/Commercialization__c/Commercialization__c.object-meta.xml
<CustomObject>
    <description
  >Stores patents, licenses, IP disclosures, and other commercialization activities sourced from the Wellspring system via CSV upsert. Full field list deferred until Wellspring CSV schema confirmed (BH-1142).</description>
    <label>Commercialization</label>
    <nameField>
        <displayFormat>COMM-{0000}</displayFormat>
        <label>Commercialization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercializations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>