force-app/main/default/objects/Commercialization__c/fields/AAR_Record__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AAR Record</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>Commercialization Activities</relationshipLabel>
    <relationshipName>Commercialization_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>