force-app/main/default/objects/Commercialization__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PI / Inventor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Commercialization Activities</relationshipLabel>
    <relationshipName>Commercialization_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>