force-app/main/default/objects/Commercialization__c/fields/Grant_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Date__c</fullName>
    <label>Grant Date</label>
    <type>Date</type>
</CustomField>