force-app/main/default/objects/Commercialization__c/fields/Wellspring_ID__c.field-meta.xml
<CustomField>
    <fullName>Wellspring_ID__c</fullName>
    <externalId>true</externalId>
    <label>Wellspring ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>